--- a/public/tic_tac_toe.html
+++ b/public/tic_tac_toe.html
@@ -46,7 +46,7 @@
     <ul>
         <li>
         <h2>
-        download code and .exe file :<a href="../assets/tic tac toe.zip" download="tic_tac_toe(code fiel + exe file).zip" > C_tic_tac_toe</a>
+        download code and .exe file (for PC platforms only) : <a href="../assets/tic tac toe.zip" download="tic_tac_toe(code fiel + exe file).zip" >C_tic_tac_toe</a>
         </h2>
         </li>
     </ul>
