--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="./assets/images/index/icon.png" />
     <link rel="icon" href="./assets/images/index/icon.png" />
     <title>resu-me</title>
 </head>
