--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="assets/images/index/pfp.20.png" height="200">
     <h1>C developer</h1>
     <h3>
-        Introducing a food-loving, lazily efficient C developer with a knack for problem-solving, a deep interest in
+        Introducing Atulya, a food-loving, lazily efficient C developer with a knack for problem-solving, a deep interest in
         maths and science, and an impressive ability to code while indulging in tasty treats. Bugs tremble in their
         presence as they conquer errors with ease. Join this epicurean genius on a delicious coding journey where
         laziness and a passion for knowledge combine to create a unique and unstoppable force.
